<resources>
    <string name="app_name">圈艺</string>
    <string name="ok">确定</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="search">搜索</string>
    <string name="reply">回复</string>

    <string name="edit">编辑</string>
    <string name="title_my_friend">我的好友</string>
    <string name="cancel_concern">取消关注</string>
    <string name="concern">关注</string>
    <string name="concern_success">关注成功</string>
    <string name="cancel_concern_success">取消关注成功</string>
    <string name="wrong_api">请检查网络状况</string>

    <string name="topic_no_share">未找到当前话题</string>
    <string name="exit_log_out">退出当前账号</string>
    <string name="manager_user">账号管理</string>
    <string name="clear_catch">清理缓存</string>
    <string name="vison">检查更新</string>
    <string name="privicy_set">隐私设置</string>
    <string name="feedback">软件反馈</string>


    <string name="about_author">关于作者</string>
    <string name="about_app">关于圈艺</string>
    <string name="problems">常见问题</string>
    <string name="net_toast">网络环境检测提示</string>
    <string name="delete">删除</string>
    <string name="api_no_data">当前Api无法提供数据</string>
    <string name="title_set">设置</string>

    <string name="share">分享</string>
    <string name="cancel">取消</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="collection">收藏</string>
    <string name="title_location">我在这里</string>
    <string name="text_public">公开</string>
    <string name="text_friends">好友可见</string>
    <string name="text_myself">仅自己可见</string>
    <string name="str_recent">最近</string>
    <string name="str_default">默认</string>
    <string name="str_bear">小熊</string>
    <string name="str_cute">可爱</string>
    <string name="wront_net">请检查网络状态</string>
    <string name="register">注册</string>
    <string name="str_if_original_weibo_comment">是否评论给原作者</string>
    <string name="api_not_found">当前API不存在，等待SDK开放才可以使用</string>
    <string name="str_camera">拍照</string>
    <string name="str_photo">图库</string>
</resources>
