<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">
    <RadioGroup
        android:id="@+id/rg_authority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <RadioButton
            android:id="@+id/rb_public"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:text="@string/text_public"/>
        <RadioButton
            android:id="@+id/rb_friends"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:text="@string/text_friends"/>
        <RadioButton
            android:id="@+id/rb_self"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:text="@string/text_myself"/>
    </RadioGroup>
</LinearLayout>