<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f2f2f2">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/rl_manager_user"
                style="@style/ItemSetLLayout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:text="@string/manager_user"/>
                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_alignParentRight="true"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_clear_cache"
                android:layout_marginTop="2dp"
                style="@style/ItemSetLLayout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:text="@string/clear_catch"/>
                <TextView
                    android:id="@+id/tv_cache"
                    android:text="0M"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_check_vision"
                android:layout_marginTop="2dp"
                style="@style/ItemSetLLayout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:text="@string/vison"/>
                <TextView
                    android:text="V1.0.0"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_problems"
                android:layout_marginTop="20dp"
                style="@style/ItemSetLLayout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:text="@string/problems"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="2dp"
                style="@style/ItemSetLLayout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:text="@string/net_toast"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_author"
                android:layout_marginTop="20dp"
                style="@style/ItemSetLLayout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:text="@string/about_author"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="2dp"
                style="@style/ItemSetLLayout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp"
                    android:layout_centerVertical="true"
                    android:text="@string/about_app"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_exit"
                android:layout_marginTop="20dp"
                style="@style/ItemSetLLayout">
                <TextView
                    android:text="@string/exit_log_out"
                    android:layout_centerInParent="true"
                    android:textSize="16sp"
                    android:textColor="@color/btn_login_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <ImageView
                android:layout_marginTop="20dp"
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_set_pro"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>